# ws-sasha-health

./: .coveragerc  .env.example  .gitignore  AGENTS.md  Dockerfile  deploy.sh  docker-compose.yml  pyproject.toml  supervisord.conf
.github/workflows/: deploy-sasha-health.yml
LocalLibrary/: CONTEXT.md  Product.md  START.md  knowledge.md  rules.md
app/: auth.py  bot.py  config.py  hermes_notify.py  main.py  ocr.py  seed.py  storage.py  tenant.py  visit_prompt.py
app/cron/: __init__.py  check_medications.py  check_visits.py
app/routes/: __init__.py  admin.py  auth.py  belgosstrakh.py  fluorography.py  history.py  inbox.py  insurance.py  media.py  navigator_api.py  pharmacy.py  (+3 more)
docs/: GITHUB_ACTIONS_SECRETS_CHECKLIST.md  TAILSCALE_API_PROXY.md
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.node.json  vite.config.ts
scripts/: audit_diagnoses.py  com.sasha-health.backend.plist  cron_pill_reminder.py  make_pwa.py  run_backend.sh  seed.sh  start.sh  test.sh
tests/: conftest.py  test_auth.py  test_belgosstrakh_submit.py  test_bot.py  test_config.py  test_cron_medications.py  test_cron_visits.py  test_hermes_notify.py  test_infra.py  test_integration.py  test_main.py  test_ocr.py  test_pipeline.py  test_routes_fluorography.py  test_routes_history.py  test_routes_inbox.py  test_routes_insurance.py  test_routes_media.py  test_routes_pharmacy.py  test_routes_profile.py  test_routes_schedule.py  test_schemas.py  test_seed.py  test_static.py  test_storage.py  test_visit_prompt.py
tools/: __init__.py  belgosstrakh_submit.py
(+94 files in other folders)
